/* -*- mode: protobuf; tab-width: 2; indent-tabs-mode: nil; c-basic-offset: 2 -*- */

/*
 * @(#)locator.proto        
 *
 * Copyright (c) 2013 - 2014 Argusat Limited
 * 10 Underwood Road,  Southampton.  UK
 * All rights reserved.
 *
 * This software is the confidential and proprietary information of 
 * Argusat Limited. ("Confidential Information").  You shall not
 * disclose such Confidential Information and shall use it only in
 * accordance with the terms of the license agreement you entered into
 * with Argusat Limited.
 */

package com.argusat.gjl.locator;

option java_package = "com.argusat.gjl.service.locator";
option java_outer_classname = "LocatorProtoBuf";

import "location.proto";

message BeginLocatorSessionRequest {

  required string deviceId = 1;
  required com.argusat.gjl.observation.Location location = 2;

}

message BeginLocatorSessionResponse {

  enum ErrorCode {
    NONE = 0;
    SESSION_ALREADY_STARTED = 1;
    INSUFFICIENT_LOCAL_CANDIDATES = 2;
  }

  required ErrorCode responseCode = 1;
  optional string responseMessage = 2;
  
}

message JoinLocatorSessionRequest {

  required string deviceId = 1;
  

}

message JoinLocatorSessionResponse {

  enum ErrorCode {
    NONE = 0;
    SESSION_CANCELLED = 1;
  }

  required ErrorCode responseCode = 1;
  optional string responseMessage = 2;


}


message EndLocatorSessionRequest {

  required string deviceId = 1;

  
}

message EndLocatorSessionResponse {

  enum ErrorCode {
    NONE = 0;
  }

  required ErrorCode responseCode = 1;
  optional string responseMessage = 2;
  
}
